module(
    name = "annotation_converter"
)

bazel_dep(
    name = "rules_kotlin",
    version = "2.1.8",
)

bazel_dep(name = "rules_jvm_external", version = "6.7")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.github.javaparser:javaparser-core:3.27.0"
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
