bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    fetch_sources = True,
    artifacts = ["org.jetbrains:annotations:26.1.0"],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")
