bazel_dep(name = "rules_kotlin", version = "2.2.2")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
    "//toolchains:kotlin_toolchain",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.kotlinx:kotlinx-serialization-core-jvm:1.8.0",
        "org.jetbrains.kotlin:kotlin-serialization-compiler-plugin-embeddable:2.1.0",
    ],
)
use_repo(maven, "maven")
