module(
    name = "bazel_worker_jps",
    version = "0",
)

bazel_dep(name = "bazel_worker_api", version = "0.0.6")
bazel_dep(name = "protobuf", version = "32.0")
bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_java", version = "8.3.0")

# Keep this fixture on the same protobuf line as simpleBazelProjectsForTesting/protobufTest.
# rules_jvm_external otherwise upgrades protobuf to 33.x, whose upb tools fail with Zig on Linux CI.
single_version_override(module_name = "protobuf", version = "32.0")
single_version_override(module_name = "bazel_worker_api", version = "0.0.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
  artifacts = [
    "com.google.protobuf:protobuf-java:4.28.3",
    "com.google.protobuf:protobuf-java-util:4.28.3",
  ],
)

use_repo(maven, "maven")

### Hermetic CC Toolchain

bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)

# MacOS ARM64 only; others use Zig hermetic
# Based on the issue -- https://github.com/uber/hermetic_cc_toolchain/issues/10
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "darwin-aarch64": "15.0.0",
    },
)
use_repo(llvm, "llvm_toolchain")
